# infradian

./: .env.example  .gitignore  .vercelignore  BENCHMARK.md  CITATION.cff  DATASHEET.md  DEPLOY.md  ETHICS.md  LIMITATIONS.md  MODEL_CARD.md  Makefile  NOTICE  README.md  SUBMISSION.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.claude/: launch.json
.github/workflows/: ci.yml
.vercel/: project.json
api/: _ai_routes.py  _booster.py  _inference.py  index.py
configs/splits/: mcphases_v1.json
datasets/infradian-synth-1k/: README.md
datasets/infradian-synth-1k/data/: test-00000-of-00001.parquet  train-00000-of-00001.parquet  validation-00000-of-00001.parquet
deploy/: Dockerfile  web.Dockerfile
deploy/hf/model/: README.md
docs/: effect_sizes.md  if_null.md  preregistration.md  tier_b.md  video_script.md
results/: baselines_tierB.json  baselines_tierC.json  mcphases_aggregates.json  model_tierB.json  model_tierC.json  transfer_sim2real.json
results/models/infradian-ref-s/: booster_meta.json  e3g_reg.txt  feature_spec.json  infradian_ref.joblib  pdg_reg.txt  phase_clf.txt
scripts/: export_web_data.py  publish_hf.py  run_bench.py  run_full_bench.py
scripts/hooks/: pre-commit
src/infradian/: __init__.py  cli.py
src/infradian/aio/: __init__.py  symptoms.py  (+2 more)
tests/: test_aio.py  test_api.py  test_feature_causality.py  test_llm.py  test_model.py  test_privacy.py  test_safety_redteam.py  test_serve_parity.py  test_splits.py  test_synthetic_effect_sizes.py
web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
(+49 files in other folders)
