[project]
name = "infradian"
version = "0.1.0"
description = "An open benchmark for hormonal trajectory inference from consumer wearables."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "INFRADIAN contributors" }]
keywords = [
    "womens-health",
    "endocrinology",
    "menstrual-cycle",
    "wearables",
    "benchmark",
    "time-series",
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "pyarrow>=16.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "joblib>=1.5.3",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "structlog>=24.1",
]
llm = [
    "openai>=1.40",
]
viz = [
    "matplotlib>=3.9",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "httpx>=0.27",
]

[project.scripts]
infradian = "infradian.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infradian"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
